--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:url" content="https://lisztfever.com/">
     <meta name="google-site-verification" content="LYUiPns7iYMvZZbOwm--oXBcVGaP8x4LLdIcslJWhsA" />
+    <meta name="title" content="Always Live in Concerts.">
+    <meta name="keywords" content="lisztfever, lisztomania, concerts, live, chatbot">
+    <meta name="description" content="Meet your favorite artists.">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
