--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:url" content="https://lisztfever.com/">
     <meta name="google-site-verification" content="LYUiPns7iYMvZZbOwm--oXBcVGaP8x4LLdIcslJWhsA" />
     <meta name="title" content="Always Live in Concerts.">
-    <meta name="keywords" content="lisztfever, lisztomania, concerts, live, chatbot">
-    <meta name="description" content="Meet your favorite artists.">
+    <meta name="keywords" content="lisztfever,lisztomania,concerts,live,chatbot,artist,aritsts,music,festival,">
+    <meta name="description" content="Lisztfever. Discover artists coming to your town. Get tickets for concerts. Share the moment with your loved ones.">
+    <meta property="og:title" content="Lisztfever"/>
+    <meta property="og:url" content="https://lisztfever.com/">
+    <meta property="og:image" content="https://s3.amazonaws.com/lisztfeverapp/lisztfever_logo.png"/>
+    <meta property="og:description" content="Lisztfever. Discover artists coming to your town. Get tickets for concerts. Share the moment with your loved ones."/>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
